updated API, added constraints on fields
