# api/swagger/swagger.yaml
@@ -2,7 +2,7 @@ swagger: '2.0'
 info:
   title: IdeaMarket API
   description: IdeaMarket API Definition
-  version: "0.1.0"
+  version: '0.2.0'
 # the domain of the service
 host: localhost:1337
 # array of all schemes that your API supports
@@ -13,13 +13,56 @@ basePath: /api/v1
 produces:
   - application/json
 paths:
+  /auth:
+    post:
+      description: Used to create new authentication credentials. 
+      parameters:
+        - name: authentication
+          in: body
+          description: The authentication JSON to be used for authentication
+          schema:
+            $ref: '#/definitions/Authentication'
+          required: true
+      tags:
+        - Authentication
+      responses:
+        200:
+          description: Creates new authentication credentials
+  /auth/login:
+    post:
+      parameters:
+        - name: idea
+          in: body
+          description: The authentication JSON to be used for authentication
+          schema:
+            $ref: '#/definitions/Authentication'
+          required: true
+      tags:
+        - Authentication
+      responses:
+        200:
+          description: User was successfully logged-in into the system
+  /auth/changepassword:
+    put:
+      parameters:
+        - name: idea
+          in: body
+          description: The idea JSON you want to post
+          schema:
+            $ref: '#/definitions/Authentication'
+          required: true
+      tags:
+        - Authentication
+      responses:
+        200:
+          description: User password was successfully updated.
   /ideas:
     get:
       summary: Idea Information
       description: |
         The endpoint returns information about a idea.
       parameters:
-        - name: search
+        - name: q
           in: query
           description: The search string for the idea. This will be match againts the idea title, content, and tags
           required: false
@@ -81,6 +124,42 @@ paths:
       responses:
         200:
           description: Sends the User with GUID        
+  /ideas/{guid}/comments:
+    post:
+      description: adds a comment to an idea
+      parameters:
+        - name: guid
+          in: path
+          type: string
+          description: ID of the idea to which the comment will be added
+          required: true
+        - name: comment
+          in: body
+          description: Adds a comment to an Idea
+          schema:
+            $ref: '#/definitions/Comment'
+          required: true
+      responses:
+        200:
+          description: A new comment was added to the idea
+  /ideas/{guid}/stat:
+    get:
+      description: request for the statistics
+      parameters:
+        - name: guid
+          in: path
+          type: string
+          description: ID of the idea to which the comment will be added
+          required: true
+      responses:
+        200:
+          description: An array of ideas
+          schema:
+           $ref: '#/definitions/IdeaStat'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
   /users:
     get:
       summary: User Information
@@ -149,6 +228,21 @@ paths:
       responses:
         200:
           description: Sends the User with GUID
+  /users/{guid}/stat:
+    get:
+      parameters:
+        - name: guid
+          in: path
+          type: string
+          description: ID of the user
+          required: true
+      tags:
+        - Users
+      responses:
+        200:
+          description: Sends the User stat
+          schema:
+            $ref: '#/definitions/UserStat'
 definitions:
  Authentication:
   type: object
@@ -157,12 +251,13 @@ definitions:
     id:
       type: integer
       format: int64
-      description: primary key
+      description: primary key. auto-generated if not supplied
     username:
       type: string
     password:
       type: string
       format: password
+  required: ['username', 'password']
  Brand:
   type: object
   description: Existing brands i.e. Uber
@@ -174,12 +269,13 @@ definitions:
     name:
       type: string
       description: the popular name for the brand i.e. Uber
-    officialName:
+    official_name:
       type: string
       description: the formal name or could be the company name i.e. Uber Technologies Inc.
     url:
       type: string
       description: url for the brand
+  required: ['id', 'name']
  Comment:
   type: object
   description: Idea comment. Introduced to cultivate interaction among members, to provide feedback on an Idea and make it more stronger. Allow only 2 levels of comment.
@@ -187,21 +283,19 @@ definitions:
     id:
       type: integer
       format: int64
-      description: primary key. value is autogenerated
+      description: primary key. value is auto-generated
     author:
-      type: string
-      description: User GUID
+       $ref: '#/definitions/User'
     parent:
-      type: integer
-      format: int64
-      description: Comment ID. If present the comment is already a second level comment. Additional comment will be added on the same thread.
+       $ref: '#/definitions/Comment'
     detail:
       type: string
       description: the comment content
     lastUpdateAt:
       type: string
       format: dateTime
-      description: the idea created date
+      description: auto-generated by the system.
+  required: ['id', 'author']
  Error:
   type: object
   properties:
@@ -212,6 +306,7 @@ definitions:
       type: string
     fields:
       type: string
+  required: ['code', 'message']
  Idea:
   type: object
   description: Idea posted on IdeaMarket
@@ -220,6 +315,7 @@ definitions:
       type: string
       enum: ['public', 'private', 'protected']
       description: the access type for the idea |
+                  defaults to public if not supplied |
                   Public - accessible to everyone, even users not logged-in to the application. No credits required to view. Search engine can crawl on the idea
 
                   Protected - Only logged-in users will be able to access it. Credit is required to view and set by the Ideator.  Can also be used when posting jobs. Search engine cannot crawl on the content of the idea.
@@ -232,28 +328,28 @@ definitions:
       type: array
       items: 
         $ref: '#/definitions/Comment'
-    dateCreated:
-      type: string
-      format: dateTime
-      description: the idea created date
     detail:
       type: string
       description: idea full details
     guid:
       type: string
-      description: Unique identifier for the Idea
+      description: Auto-generated if not supplied. Unique identifier for the Idea.
     ideator:
-      $ref: '#/definitions/User'
+      type: string
+      description: User GUID.
     status:
       type: string
       enum: ['draft', 'published']
-      description: only published ideas are searchable. draft is the default status when a task is created
+      default: 'draft'
+      description: Defaults to draft. | Only published ideas are searchable.
     similarApplications:
       type: array
       items:
         $ref: '#/definitions/Brand'
     stat:
-      $ref: '#/definitions/IdeaStat'
+      type: integer
+      format: int64
+      description: IdeaStat GUID. During creation of Idea if not present, the object will be auto-generated.
     tags:
      type: array
      description: can be used to filter and search ideas
@@ -262,6 +358,7 @@ definitions:
     title:
       type: string
       description: A short description for the Idea. The text to show on a list
+  required: ['detail', 'ideator', 'title']
  IdeaStat:
   type: object
   description: Idea statistics. Useful statistics to aid users when selecting ideas to view. Users are expected to view ideas with high views and likes.
@@ -289,20 +386,27 @@ definitions:
  User:
   type: object
   properties:
-    guid:
+    id:
       type: string
-      description: Unique identifier for the User
+      description: GUID. Auto-generated if not supplied
     name:
       type: string
       description: the name of the user that will be displayed in the application
-    dateCreated:
+    bio:
       type: string
-      format: dateTime
-      description: account creation date. helpful when 
+      description: a short description for the user
+    website:
+      type: string
+      description: the user's website
     auth:
-      $ref: '#/definitions/Authentication'
+      type: integer
+      format: int64
+      description: Authentication ID
     stat:
-      $ref: '#/definitions/UserStat'
+      type: integer
+      format: int64
+      description: UserStat ID
+  required: ['name', 'auth']
  UserStat:
   type: object
   description: Useful information before viewing a new idea. If the views and likes are small, viewers can check the ideators statistics before deciding to past or continue viewing the idea.
